svg alignments and typing corrections

--- a/app/assets/stylesheets/landing_page_new/owl-slider.css.scss
+++ b/app/assets/stylesheets/landing_page_new/owl-slider.css.scss
@@ -36,7 +36,7 @@
 }
 .selves {
     position: relative;
-    margin: -30px 75px auto;
+    margin: -8px 75px auto;
     width: 220px;
     padding: 0 15px;
     float: left;
@@ -51,7 +51,7 @@
 }
 .delivery-truck {
     position: relative;
-    margin: -6px 70px auto;
+    margin: 4px 70px auto;
     width: 220px;
     padding: 0 15px;
     float: left;
@@ -78,7 +78,7 @@
 
 .selves {
     position: relative;
-    margin: -30px 38px auto;
+    margin: -8px 38px auto;
     width: 220px;
     padding: 0 15px;
     float: left;
@@ -86,7 +86,7 @@
 
 .delivery-truck {
     position: relative;
-    margin: -6px 37px auto;
+    margin: 10px 37px auto;
     width: 220px;
     padding: 0 15px;
     float: left;
